# src/controllers/transaction-controller.ts
@@ -2,8 +2,10 @@ import {
   Body,
   Controller,
   Get,
+  NoSecurity,
   Path,
   Post,
+  Query,
   Response,
   Route,
   Security,
@@ -12,6 +14,7 @@ import {
 import {Month} from '../@types/models';
 import {VERBIAGE} from '../constants';
 import {ApiError} from '../errors';
+import CollectionService from '../services/collection-service';
 import TransactionService from '../services/transaction-service';
 
 export type PostTransactionBody = {
@@ -24,10 +27,12 @@ export type PostTransactionBody = {
 @Route('/api/transaction')
 export class TransactionController extends Controller {
   private transactionService: TransactionService;
+  private collectionService: CollectionService;
 
   constructor() {
     super();
     this.transactionService = new TransactionService();
+    this.collectionService = new CollectionService();
   }
 
   @Response<ApiError>(400, VERBIAGE.DUPLICATE_CHARGES)
@@ -44,6 +49,18 @@ export class TransactionController extends Controller {
   public async getAvailablePeriods(@Path() propertyId: number) {
     return await this.transactionService.getAvailablePeriodsByProperty(
       propertyId
+    );
+  }
+
+  @NoSecurity()
+  @Get('/suggestPaymentBreakdown/:propertyId')
+  public async suggestPaymentBreakdown(
+    @Path() propertyId: number,
+    @Query() amount: number
+  ) {
+    return await this.collectionService.suggestCollectionBreakdown(
+      propertyId,
+      amount
     );
   }
 }
