# src/swagger.json
@@ -369,6 +369,10 @@
 					"thresholdInMonths": {
 						"type": "number",
 						"format": "double"
+					},
+					"priority": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
@@ -1363,6 +1367,47 @@
 					{
 						"in": "path",
 						"name": "propertyId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/api/transaction/suggestPaymentBreakdown/{propertyId}": {
+			"get": {
+				"operationId": "SuggestPaymentBreakdown",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/TransactionAttr"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "propertyId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "amount",
 						"required": true,
 						"schema": {
 							"format": "double",
